src/main/java/com/example/demo/errors/exception/InvalidCredentialsException.java
package com.example.demo.errors.exception;

public class InvalidCredentialsException extends BaseException{
    public InvalidCredentialsException(String s) {
        super(s);
    }
}
